--- a/assets/css/pages/about.css
+++ b/assets/css/pages/about.css
@@ -7,6 +7,8 @@
   --linkvisited: hsl(340, 100%, 80%);
   --border-width: 0.25rem;
   --border-color: #491c2c;
+  --bento-bg: hsl(340, 38%, 13%);
+  --bento-text: hsl(340, 100%, 90%);
 }
 
 :root[data-scheme='light'] {
@@ -16,6 +18,8 @@
   --linkvisited: hsl(0, 100%, 31%);
   --border-width: 0.25rem;
   --border-color: hsl(340, 100%, 86%);
+  --bento-bg: hsl(340, 100%, 95%);
+  --bento-text: hsl(340, 100%, 13%);
 }
 
 @media (prefers-color-scheme: light) {
@@ -26,6 +30,8 @@
     --linkvisited: hsl(0, 100%, 31%);
     --border-width: 0.25rem;
     --border-color: hsl(340, 100%, 86%);
+    --bento-bg: hsl(340, 100%, 95%);
+    --bento-text: hsl(340, 100%, 13%);
   }
 }
 
@@ -205,7 +211,7 @@
 }
 
 .smolstat {
-  font-size: clamp(1rem, 1.5vw, 2rem);
+  font-size: 1rem;
   font-family:var(--font-family);
   border-radius: 100px;
   border: var(--border-width) solid var(--bg);
@@ -220,4 +226,43 @@
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-flow: dense;
   gap: 15px;
+  color: var(--bento-text);
+}
+
+.bentobox__item {
+  border-radius: 0.75rem;
+  padding: 1rem;
+  background-color: var(--bento-bg);
+}
+
+.bentobox--pronouns {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 700;
+}
+
+.bentobox--center {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  text-align: center;
+}
+
+.bentobox--colour {
+  background: linear-gradient(to right, #ff7aa7, #ff367a);
+  color: #0c0e18;
+}
+
+.smolvalue {
+  display: block;
+  font-size: 0.75rem;
+  font-weight: 700;
+}
+
+.bigvalue {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.2;
 }
