📝 Add blog post

--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -93,7 +93,7 @@ blockquote cite {
   display: block;
   margin-top: 1rem;
   font-style: normal;
-  color: var(--subtext);
+  color: var(--quote);
 }
 
 blockquote cite a:link,
