--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -39,11 +39,11 @@
     </article>
 
     {% set mentions = webmentions.children | getWebmentionsForUrl(metadata.url + page.url) %}
-    {% if mentions | length %}
-    <aside class="webmentions">
-        <h2>Web mentions</h2>
+    <aside class="webmentions reading-width">
+        <h2>Webmentions</h2>
+        {% if mentions | length %}
         <ol class="unstyled">
-        {% for mention in mentions %}
+            {% for mention in mentions %}
             <li>
                 {% if mention['wm-property'] == "like-of" %}
                 💖
@@ -58,15 +58,15 @@
                     {% endif %}
                 </a>
             </li>
-           
-        {% endfor %}
+            {% endfor %}
         </ol>
-    </aside>
-    {% endif%}
-        <form action="https://webmention.io/www.frills.dev/webmention" method="post">
-            <label for="form-webmention-source">Have you published your own post mentioning this one? Let me know the URL:</label>
-            <input id="form-webmention-source" type="url" name="source" placeholder="https://example.com" required="required"> <input type="hidden" name="target" value="{{metadata.url + page.url}}">
-            <button type="submit">Send</button>
+        {% endif%}
+        <form class="webmentions__form" action="https://webmention.io/www.frills.dev/webmention" method="post">
+            <label for="form-webmention-source">Have you published your own post mentioning this one? Let me know the URL</label>
+            <div class="webmentions__formgroup">
+                <input id="form-webmention-source" type="url" name="source" placeholder="https://your-website.com/blog-post" required="required"> <input type="hidden" name="target" value="{{metadata.url + page.url}}">
+                <button type="submit">Send</button>
+            </div>
         </form>
-
+    </aside>
 {%- endblock -%}
