--- a/structure/pages/list-experiments.njk
+++ b/structure/pages/list-experiments.njk
@@ -2,7 +2,7 @@
 
 {% block main %}
 	<div class="d-b pb-1">
-		<a href="/experiments.xml" class="rss">RSS feed</a>
+		<a href="/rss.xml" class="rss">Blogs & experiments RSS feed</a>
 	</div>
 	{% if description %}
 		<p>{{description}}</p>
