📃 Add link to github in Colophon

--- a/content/colophon.njk
+++ b/content/colophon.njk
@@ -14,7 +14,7 @@ rss: false
 		<h2>Technical information</h2>
 		<ul class="stars">
 			<li>Built using <a href="https://www.11ty.dev/">eleventy</a> static site generator</li>
-			<li>Source code is on Github</li>
+			<li>Source code is on <a href="https://github.com/frillsdev/frills-neocities">Github</a></li>
 			<li>Hosted on <a href="https://neocities.org">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/">deploy to Neocities guide</a></li>
 			<li>Coded in <a href="https://code.visualstudio.com/download">VSCode</a></li>
 			<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a> on Windows 11 and Mac OS Catalina</li>
