--- a/content/guestbook.njk
+++ b/content/guestbook.njk
@@ -41,6 +41,7 @@ scripts: '<script src="/js/guestbook.js" defer></script>'
   </noscript>
   <div id="c_widget"></div>
 </section>
+<script src="/js/guestbook.js" defer></script>
 {%- endblock -%}
 
 {%- block right -%}
