--- a/structure/components/webrings/neossg.njk
+++ b/structure/components/webrings/neossg.njk
@@ -1,6 +1,9 @@
 <div class="webring--neossg">
 	<div id="neossg">
-		<script src="https://neossg.neocities.org/onionring-variables.js"></script>
-		<script src="https://neossg.neocities.org/onionring-widget.js"></script>
+		{# <noscript> #}
+			<a href="https://neossg.neocities.org/">NeoSSG</a>
+		{# </noscript> #}
+		{# <script src="https://neossg.neocities.org/onionring-variables.js"></script> #}
+		{# <script src="https://neossg.neocities.org/onionring-widget.js"></script> #}
 	</div>
 </div>
