--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -5,9 +5,12 @@
         {% include "structure/components/logo.njk" %}
     </a>
     {% include "structure/global/nav.njk" %}
-    <div class="settings">
+    <div class="settings noscriptHide">
         <button id="colorSchemeButton" class="button ghost toggle toggle--colorscheme">
             Toggle dark theme
         </button>
     </div>
+    <aside class="ribbon-wrapper">
+        <a href="https://js-naked-day.org/" class="ribbon hidden">JS Naked Day</a>
+    </aside>
 </header>
