--- a/assets/css/abstracts/_utility.css
+++ b/assets/css/abstracts/_utility.css
@@ -68,6 +68,14 @@
   }
 }
 
+.br {
+  break-after: always;
+  margin-bottom: 1rem;
+  display: block;
+  width: 100%;
+  height: 1px;
+}
+
 .fl-r {
   float: right;
 }
