🎨 Update hidden link visited state

--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -57,7 +57,8 @@ a:focus {
   color: var(--linkhover)
 }
 
-a.hidden {
+a.hidden,
+a.hidden:visited {
   text-decoration: inherit;
   color: inherit;
 }
