--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -11,6 +11,6 @@
         </button>
     </div>
     <aside class="ribbon-wrapper">
-        <a href="https://js-naked-day.org/" class="ribbon hidden">JS Naked Day</a>
+        <a href="https://js-naked-day.org/" class="ribbon">JS Naked Day</a>
     </aside>
 </header>
