--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,9 +1,9 @@
-{# <script src="/js/sparkles.js"></script> #}
-{# <script src="/js/main.js"></script> #}
-{# <script src="/js/theme.js"></script> #}
-{# <script src="https://tinylytics.app/embed/81AsSQ65Uii1Jszrzzcs.js?hits&kudos={{ kudos if kudos else '💖' }}" defer></script> #}
+<script src="/js/sparkles.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/theme.js"></script>
+<script src="https://tinylytics.app/embed/81AsSQ65Uii1Jszrzzcs.js?hits&kudos={{ kudos if kudos else '💖' }}" defer></script>
 {% if scripts -%}
-{# {{scripts|safe}} #}
+{{scripts|safe}}
 {%- endif %}
 </body>
 </html>
