--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -10,7 +10,7 @@
             Toggle dark theme
         </button>
     </div>
-    <aside class="ribbon-wrapper">
+    {# <aside class="ribbon-wrapper">
         <a href="https://js-naked-day.org/" class="ribbon">JS Naked Day</a>
-    </aside>
+    </aside> #}
 </header>
