--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -41,7 +41,7 @@
     {%- endif %}
     {# Font -#}
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2">
-    {# <noscript> #}
+    <noscript>
         <link href="/css/noscript.css?nocache={{ nocache if nocache else metadata.nocache }}" rel="stylesheet">
-    {# </noscript> #}
+    </noscript>
 </head>
