🗨️ Update avatar for webments

--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -12,119 +12,119 @@ style: ''
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1243146">
-                <img src="/images/collections/avatars/crows_character_creator_.png" alt="Avatar by crowwithapen" loading="lazy">
+                <img src="/images/avatars/crows_character_creator_.png" alt="Avatar by crowwithapen" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/644129">
-                <img src="/images/collections/avatars/makowka_character_maker_II.png" alt="Avatar by Makowka" loading="lazy">
+                <img src="/images/avatars/makowka_character_maker_II.png" alt="Avatar by Makowka" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/684527">
-                <img src="/images/collections/avatars/AmandaBaeza.png" alt="Avatar by Amanda Baeza" loading="lazy">
+                <img src="/images/avatars/AmandaBaeza.png" alt="Avatar by Amanda Baeza" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/2141620">
-                <img src="/images/collections/avatars/OC_Creator-transparent.png" alt="Avatar by MaeEllen" loading="lazy">
+                <img src="/images/avatars/OC_Creator-transparent.png" alt="Avatar by MaeEllen" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1473879">
-                <img src="/images/collections/avatars/PotatoLords_Persona_Creator.png" alt="Avatar by PotatoLord" loading="lazy">
+                <img src="/images/avatars/PotatoLords_Persona_Creator.png" alt="Avatar by PotatoLord" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://jazzybee.itch.io/sdvcharactercreator">
-                <img src="/images/collections/avatars/stardew.png" alt="Avatar by Jazzybee" loading="lazy">
+                <img src="/images/avatars/stardew.png" alt="Avatar by Jazzybee" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1944831">
-                <img src="/images/collections/avatars/TOON_ME.png" alt="Avatar by hellosunnycore" loading="lazy">
+                <img src="/images/avatars/TOON_ME.png" alt="Avatar by hellosunnycore" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1342558">
-                <img src="/images/collections/avatars/Ultimate_friends_face_maker.png" alt="Avatar by lunevani" loading="lazy">
+                <img src="/images/avatars/Ultimate_friends_face_maker.png" alt="Avatar by lunevani" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/49528">
-                <img src="/images/collections/avatars/nosk.png" alt="Avatar by Nosk" loading="lazy">
+                <img src="/images/avatars/nosk.png" alt="Avatar by Nosk" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/263035/">
-                <img src="/images/collections/avatars/makowka_oc_maker.png" alt="Avatar by Makowwka" loading="lazy">
+                <img src="/images/avatars/makowka_oc_maker.png" alt="Avatar by Makowwka" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/136066/">
-                <img src="/images/collections/avatars/Cutie_Creator_20.png" alt="Avatar by Citrus Lucy" loading="lazy">
+                <img src="/images/avatars/Cutie_Creator_20.png" alt="Avatar by Citrus Lucy" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1322863/">
-                <img src="/images/collections/avatars/_friend_maker__by_Rowyn.png" alt="Avatar by Rowyn" loading="lazy">
+                <img src="/images/avatars/_friend_maker__by_Rowyn.png" alt="Avatar by Rowyn" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/1918788">
-                <img src="/images/collections/avatars/anjubatus_heart_hold_char.png" alt="Avatar by Anjubatus" loading="lazy">
+                <img src="/images/avatars/anjubatus_heart_hold_char.png" alt="Avatar by Anjubatus" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://picrew.me/en/image_maker/606067/">
-                <img src="/images/collections/avatars/scrimsart.png" alt="Avatar by Scrimsart" loading="lazy">
+                <img src="/images/avatars/scrimsart.png" alt="Avatar by Scrimsart" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="http://mia-wilkes.squarespace.com/">
-                <img src="/images/collections/avatars/miaw.jpg" alt="Avatar by Mia Wilkes" loading="lazy">
+                <img src="/images/avatars/miaw.jpg" alt="Avatar by Mia Wilkes" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://www.andycarolan.com/">
-                <img src="/images/collections/avatars/andycarolan-pink.png" alt="Avatar by Andy Carolan" loading="lazy">
+                <img src="/images/avatars/andycarolan-pink.png" alt="Avatar by Andy Carolan" loading="lazy">
             </a>
         </figure>
     </div>
     <div class="dashboard__item">
         <figure class="card">
             <a href="https://alexboucher.carbonmade.com/">
-                <img src="/images/collections/avatars/flowerveil.png" alt="Avatar by Flowerveil" loading="lazy">
+                <img src="/images/avatars/flowerveil.png" alt="Avatar by Flowerveil" loading="lazy">
             </a>
         </figure>
     </div>
