📗 Updated currently reading emoji

--- a/content/index.njk
+++ b/content/index.njk
@@ -102,7 +102,7 @@ scripts: '
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small',
-			emoji = '<img src="/images/emoji/notebook_with_decorative_cover_3d.png" alt="Books emoji">',
+			emoji = '<img src="/images/emoji/book.png" alt="Books emoji">',
 			header = '<h2>Currently reading</h2>',
 			body = '
 			<ol class="unstyled mb-0">
