--- a/content/now.njk
+++ b/content/now.njk
@@ -1,51 +1,66 @@
 ---
 title: Now
-description: This is a now page, and if you have your own site, you should make one too!
+description: This is a /now page, and if you have your own site, you should make one too!
 eleventyNavigation:
   key: Now
   emoji: <span class="emoji" aria-hidden="true">⌚</span>
   order: 2
 rss: true
-date: 2024-04-09
+date: 2024-05-07
 ---
 {% extends 'structure/templates/page-2col.njk'%}
+{% import "structure/components/components.njk" as macro with context %}
 
 {% block main %}
 <h1>{{title}}</h1>
 <article class="reading-width">
-  <p>What I am up to today, this week, this month, this year.<br />
-
+  <p>This is a /now page, if you have your own site, <a href="https://nownownow.com/about">you should consider making one</a> too.</p>
   <small class="d-b">Last updated: {{ date | readableDate("d LLL yyyy") }}</small>
 
   <hr class="my-2">
 
-  <h2>Days</h2>
-  <ul>
-    <li>Playing <a href="https://rogule.com/">Rogule</a> and <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> daily.</li>
-    <li>Done zero reading. My sister is hot on my heels with ToG.</li>
-    <li>Got a promotion to Senior Accessibility Specialist!</li>
-    <li>Engagement and wedding rings should be finished any day now!?</li>
-  </ul>
-  {# ------------------------------ #}
-  <h2>Weeks</h2>
-  <ul>
-    <li>Painting and decorating my hallway.</li>
-    <li>Watching <a href="https://www.formula1.com/">Formula 1</a>.
-  </ul>
-  {# ------------------------------ #}
-  <h2>Months</h2>
-  <ul>
-    <li>Reading the Throne of Glass series and enjoying it. I had been in a reading dry spell for 2½ years, so I am really savouring it at the moment. I have a large TBR list now.</li>
-    <li>Work is slow, then fast, then slow. Inconsistent work flows at the moment.</li>
-    <li>Maintaining the health of pup dog (suffered from an acute kidney injury in September 2023). Blood tests (to monitor her creatinine and urea levels) are now once every six months.</li>
-    <li>Trying to get my ass in gear to organise a wedding.</li>
-  </ul>
-  {# ------------------------------ #}
-  <h2>Years</h2>
-  <ul>
-    <li>Working at a fast-paced private digital agency on a variety of clients.</li>
-    <li>Enjoying working from home with the odd day in the office.</li>
-    <li>Need to get the boiler serviced.</li>
-  </ul>
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">👩‍💻</span>',
+    body = '<p>I am currently a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency on a variety of clients. I work from home with an odd day in the office.</p>') }}
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">🥫</span>',
+    body = '<p>I am collecting soda can tabs for <a href="https://www.mrshappyhomemaker.com/soda-can-tabs-hangers/" aria-label="Collecting can tabs for reasons">reasons</a>.</p>') }}
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">📺</span>',
+    body = '<p>I am watching <a href="https://www.imdb.com/title/tt7908628/">What We Do in the Shadows (TV Series)</a> Season 5, and considering starting from scratch when I finish that because it is ultimate telly comfort watching. On the weekends, I tune in to watch <a href="https://www.formula1.com/">Formula 1</a>. I\'m a Lando fan 🟠</p>') }}
+
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">🎮</span>',
+    body = '<p>I am playing <a href="https://store.steampowered.com/app/413150/Stardew_Valley/">Stardew Valley</a> on the Steam Deck, and <a href="https://rogule.com/">Rogule</a> and <a href="https://www.nytimes.com/games/wordle/index.html">Wordle</a> on my phone.</p>') }}
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<img src="/images/emoji/book.png" alt="Books emoji">',
+    body = '<p>I am reading: nothing actively. Empire of Storms lays dormant on my bedside table, with a tarot card bookmark languishing in the middle, at the start of the next section.</p>') }}
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">👰</span>',
+    body = '<p>Pretending to organise a wedding, but realistically it\'s at the bottom of the pile of importance at the moment. The rings are being made by a friend, cast from sentimental gold and diamonds from my family.</p>') }}
+
+  {{ macro.callout(
+    element = 'div',
+    modifiers = '',
+    emoji = '<span class="emoji" role="img" aria-label="Spanner and hammer">🐕</span>',
+    body = '  <p>Maintaining the health of pup dog (suffered from an acute kidney injury in September 2023). Blood tests (to monitor her creatinine and urea levels) are now once every six months.</p>') }}
+
 </article>
 {% endblock %}
