🐶 Update Orla shrine + pics

--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -13,23 +13,12 @@ date: 2023-11-19
 	<h2 class="visually-hidden">Bio</h2>
 	<img src="/images/shrine/orla/orla-bio.png" alt="A cut out of a pale yellow labrador with mud splatters on her face.">
 	<ul class="unstyled">
-		<li><span class="emoji" role="img" aria-label="Names">🏅</span> Orla, squishy bum, sausage, piggles</li>
+		<li><span class="emoji" role="img" aria-label="Names">🏅</span> Orla, o-dawg, squish, orlyworlywigglybum</li>
 		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
 		<li><span class="emoji" role="img" aria-label="Birthday">🎂</span> February 2022</li>
 		<li><span class="emoji" role="img" aria-label="Breed">🐶</span> Labrador</li>
 		<li><span role="img" class="emoji" aria-label="Status">💩</span> Probably poopin'</li>
 	</ul>
-	<figure>
-	<figcaption>Dream woofs</figcaption>
-		<audio controls loop>
-			<source src="/media/orla-dreamwoofs.mp3" type="audio/mpeg">
-		</audio> 
-	</figure>
-	<figure>
-	<img src="/images/shrine/orla/bluey.png" alt="When I ask my dog if she wants to go for a walk, first picture is a calm sitting dog, the second picture is a blurry dog going crazy.">
-	<figcaption>
-		Orla as a character from Bluey. <a href="https://picrew.me/share?cd=v2AT97FlXm">Picrew source</a>.
-	</figcaption>
 	</figure>
 
 </div>
@@ -39,8 +28,13 @@ date: 2023-11-19
 {%- block main -%}
 <section>
 	<div class="reading-width">
-		<p>Orla is my girl. She is my baby of the fluff. My favourite person. I spend more time with her than anyone else and she never seems to get sick of me. I can't remember what life was like before she joined my family, she brings me so much joy every single day - my cup runneth over.</p>
-		<p>If you're human, she'll vibe check you. Once you pass, she'll love you intensely and probably pee on the floor out of excitement of seeing you. If you're a canine, check your watch, it's play'o'clock! Unless you're not into it, in which case: OK bye.</p>
+		<p>Orla is my girl. My baby of the fluff. My favourite person.</p>
+		<figure class="mb-1">
+			<figcaption>Dream woofs</figcaption>
+			<audio controls loop>
+				<source src="/media/orla-dreamwoofs.mp3" type="audio/mpeg">
+			</audio>
+		</figure>
 	</div>
 </section>
 
@@ -57,7 +51,7 @@ date: 2023-11-19
 				<li>Nose: Expert sniffer</li>
 				<li>Teeth: Pearly white</li>
 				<li>Paws: Perfect</li>
-				<li>Tail: Triangle</li>
+				<li>Tail: Learning to wag properly</li>
 			</ul>
 		</div>
 	</article>
@@ -113,8 +107,10 @@ date: 2023-11-19
 	<img src="/images/shrine/orla/orla13.jpg" class="dashboard__item" alt="Labrador curled up sleeping, looks like a pastry.">
 	<img src="/images/shrine/orla/orla14.jpg" class="dashboard__item" alt="Labrador wearing a blue harness sits side on, looking towards the camera with a huge floppy tongue hanging out the side of her mouth.">
 	<img src="/images/shrine/orla/orla15.jpg" class="dashboard__item" alt="Soggy labrador walks forwards with her tail held high, a big puddle is in the background.">
-	<video controls poster="/images/shrine/orla/orla-woods.jpg">
+	<video controls poster="/images/shrine/orla/orla-woods.jpg" class="dashboard__item">
 		<source src="/media/orla-woods.mp4" type="video/mp4">
 	</video>
+	<img src="/images/shrine/orla/orla16.jpg" class="dashboard__item" alt="Labrador sits smiling up to the camera surrounded by bluebells.">
+	<img src="/images/shrine/orla/orla17.jpg" class="dashboard__item" alt="Labrador sits with tongue hanging out, a path and impressively orangey pinky purple sky behind her.">
 </div>
 {%- endblock -%}
