--- a/content/about.njk
+++ b/content/about.njk
@@ -90,50 +90,74 @@ nocache: reboot
 		</div>
 
 		<div class="bentobox">
-			<h2 class="visually-hidden">Pronouns</h2>
-			<div class="bentobox__item bentobox--pronouns bentobox--center">she/her</div>
-			<h2 class="visually-hidden">Get in contact</h2>
-			<div class="bentobox__item">
-				<a href="https://indieweb.social/@frills">@frills@indieweb.social</a>
+			<div class="bentobox-column-1">
+				<div class="bentobox__item">
+					<label>
+						<input type="checkbox">
+						<span>Inspiration</span>
+					</label>
+				</div>
+				<div class="bentobox__item">
+					<label>
+						<input type="checkbox">
+						<span>Proficiency bonus</span>
+					</label>
+				</div>
+				<div class="bentobox__item bentobox--pronouns bentobox--center">
+					<h2 class="visually-hidden">Pronouns</h2>
+					<p>she/her</p>
+				</div>
+				<div class="bentobox__item">
+					<h2>Languages</h2>
+					<ul class="unstyled">
+						<li>English (native)</li>
+						<li>Welsh (beginner/dysgu)</li>
+					</ul>
+				</div>
+				<h2 class="visually-hidden">Get in contact</h2>
+				<div class="bentobox__item">
+					<a href="https://indieweb.social/@frills">@frills@indieweb.social</a>
+				</div>
+				<div class="bentobox__item">
+					fri11s [at] proton [dot] me
+				</div>
+				<div class="bentobox__item">
+					<a href="/guestbook">Leave a message</a>
+				</div>
 			</div>
-			<div class="bentobox__item">
-				fri11s [at] proton [dot] me
+
+			<div class="bentobox--column-2">
+				<div class="bentobox__item">
+					<h2>Backstory</h2>
+					<p>An average mortal human, brimming with a plethora of hobbies and complexities. Grew up in the sticks in the South West of England, moved to Wales for the love of reading complicated road signs.</p>
+					<p>With dreams of running a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
+					<p>Currently a Senior Frontend Developer and Accessibility Specialist at a fast-paced private digital agency on a variety of clients. Working from home with an odd day in the office.</p>
+				</div>
 			</div>
-			<div class="bentobox__item">
-				<a href="/guestbook">Leave a message</a>
-			</div>
-			<div class="bentobox__item">
-				<h2>Backstory</h2>
-				<p>An average human, with lots of hobbies and complexity. Grew up in the sticks in the South West of England, moved to Wales for love of reading complicated road signs.</p>
-				<p>Always wanted to have a small arts business, but settled as a frontend developer to pay the bills (also absolutely love it).</p>
-			</div>
-			<div class="bentobox__item">
-				<h2>Morality</h2>
-				<p>Strong morality compass, especially in my work. Tech for good is my goal. My focus is on web accessibility, sustainability and climate impact.</p>
-			</div>
-			<div class="bentobox__item">
-				<h2>Languages</h2>
-				<ul>
-					<li>English (native)</li>
-					<li>Welsh (beginner/dysgu)</li>
-				</ul>
-			</div>
-			<div class="bentobox__item">
-				<h2>Marital status</h2>
-				<p>Engaged 💍</p>
+
+			<div class="bentobox--column-2">
+				<div class="bentobox__item">
+					<h2>Inventory</h2>
+					<ul class="unstyled">
+						<li>🥕 Carrot seeds</li>
+						<li>🧥 Clothes, common</li>
+						<li>💍 Engagement band</li>
+						<li>🖋️ Ink pen</li>
+						<li>🍶 Perfume (vial)</li>
+						<li>⌨️ Mechanical keyboard</li>
+						<li>🍜 Ramen noodles</li>
+						<li>📚 Stack of half-used, heavily doodled notepads</li>
+						<li>📿 Silver amulet</li>
+						<li>🛠️ Tinker's Tools</li>
+						<li>💧 Waterskin</li>
+						<li>☕ Welsh Brew tea leaves</li>
+					</ul>
+				</div>
 			</div>
 			<h2 class="visually-hidden">Favourites</h2>
 			<div class="bentobox__item bentobox--colour bentobox--center">
 				<span class="smolvalue">Favourite colour is</span>
 				<span class="bigvalue">pink</span>
-			</div>
-			<div class="bentobox__item bentobox--food bentobox--center">
-				<span class="smolvalue">Favourite food is</span>
-				<span class="bigvalue">noodles</span>
-			</div>
-			<div class="bentobox__item bentobox--drink bentobox--center">
-				<span class="smolvalue">Favourite drink is</span>
-				<span class="bigvalue">black tea with oat milk</span>
 			</div>
 		</div>
 
