--- a/assets/css/pages/about.css
+++ b/assets/css/pages/about.css
@@ -224,8 +224,8 @@
 .bentobox {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-flow: dense;
-  gap: 15px;
+  /* grid-auto-flow: dense; */
+  column-gap: 15px;
   color: var(--bento-text);
 }
 
@@ -233,6 +233,11 @@
   border-radius: 0.75rem;
   padding: 1rem;
   background-color: var(--bento-bg);
+  margin-bottom: 15px;
+}
+
+.bentobox--column-1 {
+  grid-area: 1 span / 1;
 }
 
 .bentobox--pronouns {
